examples/errors/syntax_invalid_value_say.jc
// ================================================
// ERROR: Invalid Value in Say
// Expected: [SyntaxError] Invalid value in 'say' statement
// ================================================

// Trying to say something that's not a valid value
say(+);
